--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,12 @@ bdk_electrum = { version = "0.23.0", default-features = false, features = ["use-
 bdk_kyoto = { version = "0.13.1" }
 
 uniffi = { version = "=0.29.1" }
+uniffi-dart = { git = "https://github.com/chavic/uniffi-dart.git", branch = "chavic/map-types-fix" }
 thiserror = "1.0.58"
 
 [build-dependencies]
 uniffi = { version = "=0.29.1", features = ["build"] }
+uniffi-dart = { git = "https://github.com/chavic/uniffi-dart.git", branch = "chavic/map-types-fix", features = ["build"] }
 
 [dev-dependencies]
 uniffi = { version = "=0.29.1", features = ["bindgen-tests"] }
