--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ bdk_electrum = { version = "0.23.0", default-features = false, features = ["use-
 bdk_kyoto = { version = "0.13.1" }
 
 uniffi = { version = "=0.29.1" }
-uniffi-dart = { git = "https://github.com/chavic/uniffi-dart.git", branch = "chavic/map-types-fix" }
+uniffi-dart = { git = "https://github.com/chavic/uniffi-dart.git"}
 thiserror = "1.0.58"
 
 [build-dependencies]
