--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,12 @@ homepage = "https://bitcoindevkit.org"
 repository = "https://github.com/bitcoindevkit/bdk-dart"
 edition = "2021"
 license = "MIT OR Apache-2.0"
+build = "build.rs"
 
 [lib]
 crate-type = ["lib", "staticlib", "cdylib"]
 name = "bdkffi"
+path = "bdk-ffi/bdk-ffi/src/lib.rs"
 
 [[bin]]
 name = "uniffi-bindgen"
@@ -29,7 +31,7 @@ thiserror = "1.0.58"
 
 [build-dependencies]
 uniffi = { version = "=0.29.1", features = ["build"] }
-uniffi-dart = { git = "https://github.com/chavic/uniffi-dart.git", branch = "chavic/map-types-fix", features = ["build"] }
+uniffi-dart = { git = "https://github.com/chavic/uniffi-dart.git", features = ["build"] }
 
 [dev-dependencies]
 uniffi = { version = "=0.29.1", features = ["bindgen-tests"] }
